# dlt-community-sources

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.agents/skills/adjust-endpoint/: SKILL.md
.ai/: README.md  rules.md
.ai/skills/: add-source.md
.claude/rules/: init-dlthub-workspace.md  rest-api-pipeline-workflow.md
.clinerules/: rules.md
.codex/: config.toml
.cursor/rules/: init-dlthub-workspace.mdc  rest-api-pipeline-workflow.mdc  rules.md
.github/: CODEOWNERS  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  new_source_request.yml
.github/workflows/: ci.yaml  publish.yaml
dlt_community_sources/: __init__.py  _utils.py
dlt_community_sources/app_store_connect/: README.md  __init__.py  auth.py  client.py  source.py
dlt_community_sources/meta_ads/: README.md  __init__.py  source.py
dlt_community_sources/microsoft_ads/: README.md  __init__.py  auth.py  source.py
dlt_community_sources/nextdns/: README.md  __init__.py  client.py  source.py
dlt_community_sources/tiktok_ads/: README.md  __init__.py  auth.py  source.py
dlt_community_sources/twilio/: README.md  __init__.py  client.py  source.py
dlt_community_sources/x_ads/: README.md  __init__.py  source.py
dlt_community_sources/yahoo_ads_common/: __init__.py  auth.py  helpers.py
dlt_community_sources/yahoo_ads_display/: README.md  __init__.py  source.py
docs/: twilio.md
scripts/: sync-ai-rules.sh
tests/: test_integration.py
(+41 files in other folders)
