[project]
name = "dlt-community-sources"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
dependencies = [
    "dlt>=1.0.0",
]
dynamic = ["version"]
authors = [{ name = "ota2000" }]
description = "Community-maintained dlt sources for various APIs"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
app-store-connect = ["PyJWT[crypto]>=2.8.0"]

[project.urls]
Homepage = "https://github.com/ota2000/dlt-community-sources"
Repository = "https://github.com/ota2000/dlt-community-sources"
Changelog = "https://github.com/ota2000/dlt-community-sources/releases"
Issues = "https://github.com/ota2000/dlt-community-sources/issues"

[dependency-groups]
dev = [
    "dlt[duckdb]>=1.24.0",
    "PyJWT[crypto]>=2.8.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
lint.extend-select = ["I"]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"
bump = true
strict = true
latest-tag = true

[tool.hatch.build]
include = ["dlt_community_sources"]
exclude = ["dlt_community_sources/*/tests"]

[tool.hatch.version]
source = "uv-dynamic-versioning"
